(lang dune 3.17)
(name combinatory_types)
(generate_opam_files true)
(source (github olydis/combinatory-types))
(authors "Johannes Bader")
(license MIT)

(package
 (name combinatory_types)
 (synopsis
  "OCaml implementation of a simple type system for combinatory logic")
 (description
  "OCaml versions of Barry Jay's Rocq definitions (formally proven) with running time/termination experiments.")
 (depends ocaml))
 (depends ocaml))
